<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lucho.colorgame.GameActivity"
    android:id="@+id/rlGame"
    android:background="#ffffff">

    <LinearLayout
        android:id="@+id/mainLinearLayoutHeight"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:layout_below="@+id/tvScore"
        android:layout_above="@+id/textViewAnswer"
        android:orientation="vertical" >
        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/one"
                android:background="@drawable/game_btns"
                android:layout_margin="2dp"
                android:id="@+id/button1"
                android:layout_weight="1"
                android:width="0dp"
                android:height="0dp" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/two"
                android:background="@drawable/game_btns"
                android:layout_margin="2dp"
                android:id="@+id/button2"
                android:layout_weight="1"
                android:width="0dp"
                android:height="0dp" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/three"
                android:background="@drawable/game_btns"
                android:layout_margin="2dp"
                android:id="@+id/button3"
                android:layout_weight="1"
                android:width="0dp"
                android:height="0dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/four"
                android:background="@drawable/game_btns"
                android:layout_margin="2dp"
                android:id="@+id/button4"
                android:layout_weight="1"
                android:width="0dp"
                android:height="0dp" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/five"
                android:background="@drawable/game_btns"
                android:layout_margin="2dp"
                android:id="@+id/button5"
                android:layout_weight="1"
                android:width="0dp"
                android:height="0dp" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/six"
                android:background="@drawable/game_btns"
                android:layout_margin="2dp"
                android:id="@+id/button6"
                android:layout_weight="1"
                android:width="0dp"
                android:height="0dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/seven"
                android:background="@drawable/game_btns"
                android:layout_margin="2dp"
                android:id="@+id/button7"
                android:layout_weight="1"
                android:width="0dp"
                android:height="0dp" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/eight"
                android:background="@drawable/game_btns"
                android:layout_margin="2dp"
                android:id="@+id/button8"
                android:layout_weight="1"
                android:width="0dp"
                android:height="0dp" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/nine"
                android:background="@drawable/game_btns"
                android:layout_margin="2dp"
                android:id="@+id/button9"
                android:layout_weight="1"
                android:width="0dp"
                android:height="0dp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/time"
        android:paddingTop="10dp"
        android:id="@+id/textViewTime"
        android:layout_alignParentTop="true"
        android:textSize="35sp"
        android:layout_centerInParent="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/startTime"
        android:id="@+id/tvScore"
        android:textSize="25sp"
        android:width="150dp"
        android:layout_below="@+id/textViewTime"
        android:layout_centerInParent="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/textViewAnswer"
        android:textSize="17sp"
        android:layout_marginBottom="26dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvAddSub"
        android:textSize="30sp"
        android:layout_toRightOf="@+id/textViewTime"
        android:paddingLeft="20dp"
        android:paddingTop="14dp" />

</RelativeLayout>
